--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
-                        <h4 class="font-weight-bold m-0">FLYER / MAILER DESIGN</h4>
+                        <h4 class="font-weight-bold m-0">BUSINESS CARD DESIGN</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
