--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">MD Rezuan</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">21 November 1998</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">BSC in CSE</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">B.Sc in CSE</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">04 Years</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+8801774-139861</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">mdrezuan600@gmail.com</span></h6></div>
@@ -145,7 +145,7 @@
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">BSC In CSE</h5>
+                            <h5 class="font-weight-bold mb-1">B.Sc In CSE</h5>
                             <p class="mb-2"><strong>Eastern University</strong> | <small>2021 - 2025</small></p>
                             <p>Eastern University is widely known for its quality education, superior faculty composition, excellent academic environment, sincere care for students, extensive co and extra- curricular activities, successful internship and job placement, modern digital library, good governance and administration and convenient location of the campus.</p>
                         </div>
