--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>MD Rezuan</title>
-    <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon">
-    <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon">
-    <title>FreeFolio - Freelancer Portfolio Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/img/logo.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
