--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <title>MD Rezuan</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="MD REZUAN PORTFOLIO" name="keywords">
+    <meta content="MD REZUAN PORTFOLIO" name="description">
 
     
 
