--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                          <a href="cv/r.pdf" class="btn btn-outline-light mr-5">Download CV</a>
                         <button type="button" class="btn-play" data-toggle="modal"
-                            data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
+                            data-src="v/ve.mp4" data-target="#videoModal">
                             <span></span>
                         </button>
                         <h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Play Video</h5>
