--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
+            <a href="https://www.facebook.com/Rezuan66" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -122,7 +122,8 @@
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Gulshan-1, Dhaka 1212, Dhaka Division, Bangladesh.</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
-                    <a href="" class="btn btn-outline-primary mr-4">Hire Me</a>
+                    <a href="https://www.facebook.com/Rezuan66" class="btn btn-outline-primary mr-4">Hire Me</a>
+                    <a href="https://m.me/Rezuan66" class="btn btn-outline-primary">Message</a>
                 </div>
             </div>
         </div>
