--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
 <head>
-    <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon">
     <meta charset="utf-8">
     <title>MD Rezuan</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="MD REZUAN PORTFOLIO" name="keywords">
     <meta content="MD REZUAN PORTFOLIO" name="description">
-
+    <!-- Favicon -->
+    <link href="img/Logo.jpg" rel="icon">
     
 
     <!-- Google Web Fonts -->
