--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="MD REZUAN PORTFOLIO" name="keywords">
     <meta content="MD REZUAN PORTFOLIO" name="description">
     <!-- Favicon -->
-    <link href="img/Logo.jpg" rel="icon">
+    <link href="img/ico.ico" rel="icon">
     
 
     <!-- Google Web Fonts -->
