--- a/index.html
+++ b/index.html
@@ -414,8 +414,7 @@
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div>
-                                <button class="btn btn-outline-primary" type="submit" id="sendMessageButton">Send
-                                    Message</button>
+                                <a href="https://m.me/Rezuan66" class="btn btn-outline-primary">Send Messagee</a>
                             </div>
                         </form>
                     </div>
