--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
                 <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/Rezuan66"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://m.me/Rezuan66"><i class='fab fa-facebook-messenger'></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/md-rezuan-544267168/"><i class="fab fa-linkedin-in"></i></a>
                 <a class="btn btn-light btn-social" href="https://www.instagram.com/rezuan_rs/"><i class="fab fa-instagram"></i></a>
             </div>
