--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="https://www.facebook.com/Rezuan66" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
+            <a href="https://www.linkedin.com/in/md-rezuan-544267168/" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -121,7 +121,7 @@
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Gulshan-1, Dhaka 1212, Dhaka Division, Bangladesh.</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
-                    <a href="https://www.facebook.com/Rezuan66" class="btn btn-outline-primary mr-4">Hire Me</a>
+                    <a href="https://https://www.linkedin.com/in/md-rezuan-544267168/" class="btn btn-outline-primary mr-4">Hire Me</a>
                     <a href="https://m.me/Rezuan66" class="btn btn-outline-primary">Message</a>
                 </div>
             </div>
